--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="sources\logo.png"/>
     <link rel="stylesheet" href="styles.css">
     <title>hakutq</title>
 </head>
@@ -651,10 +652,10 @@
             </a>
             
             <h1>Fraid</h1>
-            <h2>2D </h2>
+            <h2>2D souls-like platformer, in the making.</h2>
             <h2>Made in unity</h2>
             <a href="https://github.com/HakuTq/FRAID" target="_blank">
-                img
+                <img src="sources\knight_fraid.png" width="30%" height="30%">
             </a>
         </div>
 
@@ -720,11 +721,11 @@
         </div>
 
         <div class="content-section" id="homeworks">
-           <a href="#">Personal website</a>
-           <a href="#">Something</a>
-           <a href="#">Something</a>
-           <a href="#">Something</a>
-           <a href="#">Something</a>
+           <a href="https://hakutq.github.io/" target="_blank">Personal website</a>
+           <a href="#" target="_blank">Something</a>
+           <a href="#" target="_blank">Something</a>
+           <a href="#" target="_blank">Something</a>
+           <a href="#" target="_blank">Something</a>
         </div>
     </main>
     
