--- a/index.html
+++ b/index.html
@@ -640,7 +640,10 @@
             </svg>
         </div>
         <div class="content-section" id="about">
-            <h1>Hi, my name is Matyáš Doležal and I am a 4th year student of IT.</h1>
+            <h2>Hi, my name is <b>Matyáš Doležal</b></h2>
+            <p>I am currently a 4th year student of IT at SPŠT.</p>
+            <p>I have a part-time job at I&C Energo, at the analytic department, my job is programming and maintainining algorithms which take information from documents in C# and python.</p>
+            <p>I also like </p>
         </div>
 
         <div class="content-section" id="projects">
