added hoi4 to about section

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             <h2>Hi, my name is Matyáš Doležal</h2>
             <p>I am currently a 4th year student of IT at SPŠT.</p>
             <p>I have a part-time job at I&C Energo, at the analytic department, my job is programming and maintainining algorithms which take information from documents in C# and python.</p>
-            <p></p>
+            <img src="sources\hoi4.png">
         </div>
 
         <div class="content-section" id="projects">
