--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Simple personal website">
+    <meta property="og:title" content="HakuTq" />
+    <meta property="og:description" content="Simple personal website" />
+    <meta property="og:image" content="sources\logo.png" />
+    <meta property="og:url" content="https://hakutq.github.io/" />
+    <meta name="theme-color" content="#232323" />
     <link rel="icon" type="image/png" href="sources\logo.png"/>
     <link rel="stylesheet" href="styles.css">
     <title>hakutq</title>
