--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 
         <div class="content-section" id="homeworks">
            <a href="https://hakutq.github.io/" target="_blank">Personal website</a>
-           <a href="#" target="_blank">Something</a>
+           <a href="https://hakutq.github.io/responzivni_bloky" target="_blank">Something</a>
            <a href="#" target="_blank">Something</a>
            <a href="#" target="_blank">Something</a>
            <a href="#" target="_blank">Something</a>
