Added group work

--- a/index.html
+++ b/index.html
@@ -733,6 +733,7 @@
         <div class="content-section" id="homeworks">
            <a href="https://hakutq.github.io/" target="_blank">Personal website</a>
            <a href="https://hakutq.github.io/responzivni_bloky" target="_blank">Responzivni bloky, calc</a>
+           <a href="https://hakutq.github.io/JS_group_work" target="_blank">Týmová práce - JS</a>
         </div>
     </main>
     
