added some work

--- a/index.html
+++ b/index.html
@@ -734,6 +734,8 @@
            <a href="https://hakutq.github.io/" target="_blank">Personal website</a>
            <a href="https://hakutq.github.io/responzivni_bloky" target="_blank">Responzivni bloky, calc</a>
            <a href="https://hakutq.github.io/JS_group_work" target="_blank">Týmová práce - JS</a>
+           <a href="http://hakutq.euweb.cz/global_promenne" target="_blank">Globalni promenne</a>
+           <a href="http://hakutq.euweb.cz/autentizace" target="_blank">Autentizace - php</a>
         </div>
     </main>
     
